# roomba_project

./: .gitignore  README.md
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_sync_sim/lib/robot_sync_sim/: follower_node  leader_node
ros2_ws/install/robot_sync_sim/share/robot_sync_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robot_sync_sim/share/robot_sync_sim/config/: sim_params.yaml
ros2_ws/install/robot_sync_sim/share/robot_sync_sim/launch/: behavior.launch.py  simulation.launch.py
ros2_ws/install/robot_sync_sim/share/robot_sync_sim/urdf/: common_robot.xacro
ros2_ws/log/: latest_build
ros2_ws/src/robot_sync_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robot_sync_sim/models/trash/: model.sdf
ros2_ws/src/robot_sync_sim/urdf/: robot_a.urdf.xacro  robot_b.urdf.xacro
ros2_ws/src/robot_sync_sim/worlds/: empty.world
